--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <form>
         <!-- inputs for forms -->
         <div>
-            <label for ="username" >
+            <label for ="name" >
                 Username:
             </label>
             <input type="text" id="username" placeholder="username" required/>
